--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/board?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=Audtka!23
+# true ??? JPA ??? ?? ??
+spring.jpa.show-sql=true
+
+# DDL(create, alter, drop) ??? DB? ?? ??? ??? ? ??.
+spring.jpa.hibernate.ddl-auto=create
+
+# JPA? ???? Hibernate? ????? ??? SQL? ???? ????.
+spring.jpa.properties.hibernate.format_sql=true
 
